Remove borders from the right side. Change Legend text color.

--- a/templates/app.html
+++ b/templates/app.html
@@ -392,11 +392,11 @@
                 <textarea class="form-control" name="message" rows="10" required="" placeholder="Message"></textarea>
               </div>
 
-              <div id="form_send_messages" class="form_group">
+<!--               <div id="form_send_messages" class="form_group">
                 <div class="loading">Loading</div>
                 <div class="error-message">Something Went Wrong! Please Try Again</div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
+              </div> -->
 
               <div id="form_group_send_button" class="form_group_button">
                 <button type="submit">Send Message</button>
@@ -573,13 +573,13 @@ a:-webkit-any-link {
 
 /* Other Page common */
 .left_pane{
-  border: 1px solid blue;
+  border: 0px solid blue;
   margin: 8rem auto auto 10vw;
   width: 25vw;
   height: 100vh;
 }
 .right_pane{
-  border: 1px solid yellow;
+  border: 0px solid yellow;
   margin: 2rem 10vw auto 1rem;
   height: 100vh;
   width:75vw; 
@@ -776,6 +776,18 @@ a:-webkit-any-link {
     margin-top: 0em;
 }
 
+legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px
+px
+;
+    font-size: 21px;
+    line-height: inherit;
+    color: white;
+    border: 0;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 
