connect database to the website.

--- a/templates/app.html
+++ b/templates/app.html
@@ -34,7 +34,7 @@
 </head>
 <!-- **************************    Head END Body START ***************   -->
 
-<body>
+<body>  
 
   <!-- ************************* COMMON LEFT(NAVIGATION)SIDE  *********** -->
   <header id="c_left_nav_pane">
@@ -725,6 +725,12 @@ a:-webkit-any-link {
   padding: 20px;
   text-align: center;
 }
+  .project_grid_id&date{
+    display: flex;
+  .pro_title{
+    font-size:25px;
+    color:yellow;
+  }
 
 
 
