--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,4 +1,30 @@
-{% for project in projects%}
+<!-- ************  projects Left-side ********************   -->
+      <div id="projects_left_pane" class="left_pane" class="projects_left_side">
+        <ul class="project_ls_bullet">
+          <h3> Languages</h3>
+          <li>Python</li>
+          <li>HTML</li>
+          <li>Java Script</li>
+          <li>SQL</li>
+        </ul>
+
+        <ul class="project_ls_bullet">
+          <h1> STATS</h1>
+          <h3> TOTAL Projects</h3>
+          <li>3</li>
+        </ul>
+
+        <!-- projects_left_side -->
+      </div>
+
+
+      <!-- ************    projects Right-side ********************   -->
+      <div id="projects_right_pane" class="right_pane" class="projects_right_side">
+        <h1 id="projects_page_heading" class="page_heading">PROJECTS</h1>
+        <h3 id="projectst_content_heading" class="content_heading">Projects</h3>
+
+        <div class="project_main grid-container">
+          {% for project in projects%}
             <div class="project_box grid-item">
               <div class="col-md-6 pro_ID">
                 <p> {{project["Pro_ID"]}}</p>
@@ -11,6 +37,20 @@
               <h3>{{project["Title"]}}</h3>
               <h5> {{project["Name"]}}</h5>                   
               <p class="pro_learning"> {{project["Learning"]}}</p>
-              <button> {{project["Link"]}}</button>
+              <a class="btn btn-info" href='{{project["Link"]}}' target="_blank">View</a>
             </div>
           {% endfor %}
+         
+          
+          
+
+          <!-- Project Content   -->
+        </div>
+
+        <!-- projects_right_side -->
+      </div>
+
+
+
+
+
