--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <!-- ************   About Left-side ********************   -->
       <div id="about_left_pane" class="left_pane" class="about_left_side">
 
-        <img src="https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/shash_profile.jpg" alt=""
+        <img src="https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/DSC_3791.jpg" alt=""
           class="about_ls_img img-responsive">
 
         <!-- about_left_side -->
