--- a/templates/projects.html
+++ b/templates/projects.html
@@ -8,11 +8,11 @@
           <li>SQL</li>
         </ul>
 
-        <ul class="project_ls_bullet">
+<!--         <ul class="project_ls_bullet">
           <h1> STATS</h1>
           <h3> TOTAL Projects</h3>
           <li>3</li>
-        </ul>
+        </ul> -->
 
         <!-- projects_left_side -->
       </div>
