Changes needed to add in the next edition. 1. Shrink the Main content. 2. Add a Popup in the contact. 3. Fix social logos alignment. 4. Add a Language fill bar in the resume. 5. Make bullet points in two columns in About me. 6. Every link opens in a new tab.

--- a/templates/about.html
+++ b/templates/about.html
@@ -39,7 +39,7 @@
             <ul>
 
               <li> <strong>Degree:</strong> <span>Bachelors </span></li>
-              <li> <strong>Email:</strong> <span>ShashwatPatel107@gmail.com.com</span></li>
+              <li> <strong>Email:</strong> <span>ShashwatPatel107@gmail.com</span></li>
               <li> <strong>Website:</strong> <span>www.example.com</span></li>
               <!--            <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
             </ul>
