--- a/templates/contact.html
+++ b/templates/contact.html
@@ -72,7 +72,7 @@
 
 
 
-           <!-- 
+           
         <div id="contact_rs_phone_heading" class="contact_rs_headings">
           <h3 id="contact_content_heading" class="content_heading">Phone</h3>
           <p>+1(331)308-4963</p>
@@ -86,7 +86,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2965.447399930301!2d-88.18441668425316!3d41.99067286634034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f074eb79d6233%3A0xeb919f3081ba6fa6!2s144%20Hillcrest%20Ln%20%232n%2C%20Bartlett%2C%20IL%2060103!5e0!3m2!1sen!2sus!4v1669958850576!5m2!1sen!2sus"
             width="200px" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div> -->
+        </div> 
           
           
         </div>       
