Embed  resume PDF

--- a/templates/app.html
+++ b/templates/app.html
@@ -80,13 +80,14 @@
       <!-- ************  Home Page ********************   -->
       <div id="home_page" class="Home_page">
   
-        <img src="https://personal-portfolio-website.shashwatpatel5.repl.co/face_image_illustration.png" alt=""
+        <img src="https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/DSC_3791.jpg" alt=""
           class="profile_img">
         <h1 id="home_page_heading" class="page_heading ">Shashwat Patel</h1>
         <p>
-          I'm <span class="home_description">Machine Learning
+          I'm <span class="home_description">Data Science / Machine Learning
             Engineer</span>
         </p>
+
   
         <!--Homepage -->
       </div>
