--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,27 +1,4 @@
  <!-- ************  Resume Left-side ********************   -->
-<div id="resume_left_pane" class="left_pane" class="resume_left_side">
-
- <img src="https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/DSC_3791.jpg" alt=""
-          class="resume_ls_img img-responsive">
-  <h1 class="resume_name">Shashwat Patel</h1>
-  <h2 class="resume_description">Machine Learning Engineer/ Data-Scientist</h2>
-
-  <h3 id="resume_ts_subheading" class=resume_ls_subheadings>Technical-Skills </h3>
-  <ul id="resume_ts_subheading_list" class=resume_ls_subheadings_list>
-      <li>Python</li>
-      <li>SQL</li>
-      <li>Web development</li>
-  </ul>
-
-  <h3 id="resume_hi_subheading" class=resume_ls_subheadings>Hoddies and Interests </h3>
-  <ul id="resume_hi_subheading_list" class=resume_ls_subheadings_list>
-      <li>Computer Technologies</li>
-      <li>Cricket</li>
-      <li>Cycling</li>
-  </ul>
-
-<!-- Resume_left_side -->
-</div>
 
 
 
@@ -29,64 +6,9 @@
 <!-- ************    Resume Right-side ********************   -->
 <div id="resume_right_pane" class="right_pane" class="resume_right_side">
   <h1 id="_page_heading" class="page_heading">RESUME</h1>
+  <embed src="https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/Shashwat_Resume.pdf" type="application/pdf" width="100%" height="100%" />
+<!--   <iframe src="Shashwat Resume.pdf" width="45%" height="400px"></iframe> -->
 
-  <h3 id="resume_rs_edu_subheading" class=resume_rs_subheadings>Education </h3>
-   <ul id="resume_rs_edu_subheading_list" class=resume_rs_subheadings_list>
-     <li class="resume_title"> <strong>Diploma:</strong> <span>Automobile Enggineering</span>
-       <ul>
-         <li>AUG/2013- June/2016</li>
-         <li>S.T.B.S Collage of Diploma Engineering, Surat-GUJ, India</li>
-       </ul>
-     </li>
-     <li> <strong>Bachlor's:</strong> <span>Computer Science</span>
-       <ul>
-         <li>AUG/2017- Dec/2022</li>
-         <li>Northern Illinois University, DeKalb-IL, USA</li>
-       </ul>
-      </li>
-   </ul>
-
-
-
-  <h3 id="resume_rs_ctf_subheading" class=resume_rs_subheadings>Certification </h3>
-  <ul id="resume_rs_ctf_subheading_list" class=resume_rs_subheadings_list>
-    <li> <strong>Jovian:</strong> <span>Machine Learning & Data-Science Bootcamp</span></li>
-    <li> <strong>Sun Infosystems</strong> <span>C, C++, Java</span></li>
-  </ul>
-
-  <h3 id="resume_rs_exp_subheading" class=resume_rs_subheadings>Experince </h3>
-  <ul id="resume_rs_exp_subheading_list" class=resume_rs_subheadings_list>
-    <li>SKODA : Trainee
-      <ul>
-        <li>Start-Date : END-Date</li>
-        <li> Reaponsibilities</li>
-      </ul>
-    </li>
-
-    <li>B : Software Engineer
-      <ul>
-        <li>Start-Date : END-Date</li>
-        <li> Reaponsibilities</li>
-      </ul>
-  </li>
-
-  <li>C : Software Engineer
-    <ul>
-       <li>Start-Date : END-Date</li>
-      <li> Reaponsibilities</li>
-      </ul>
-    </li>
-  </ul>
-
-
-
-
-  <h3 id="resume_rs_pro_subheading" class=resume_rs_subheadings>Projects </h3>
-  <ul id="resume_rs_pro_subheading_list" class=resume_rs_subheadings_list>
-    <li>Web-Scraping: YouTube using Selenium </li>
-    <li>Data-Analytics </li>
-    <li>Web-Development </li>
-  </ul>
 
   
   <!-- resume_right_side -->
