change contact page

--- a/templates/app.html
+++ b/templates/app.html
@@ -137,6 +137,10 @@
       <div id="contact_page" class="page">
         
         {% include "contact.html"%}
+
+        
+      </div>
+      
         
         <!--contact page -->
       </div>
