--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,26 +1,45 @@
  <!-- ************  Contact Left-side ********************   -->
-      <div id="contact_page_left_pane" class="left_pane" class="contact_page_left_side">
+<!--       <div id="contact_page_left_pane" class="left_pane" class="contact_page_left_side"> -->
 
-        <div id="contact_email" class="contact_ls_item">
+<!--         <div id="contact_email" class="contact_ls_item">
           <button class="btn btn-primary btn-sm">EMAIL</button>
           <!--           <h4>EMAIL:</h4> -->
 
-        </div>
+<!--         </div> -->
 
-        <div id="contact_phone" class="contact_ls_item">
-          <button class="btn btn-primary btn-sm">PHONE</button>
+<!--         <div id="contact_phone" class="contact_ls_item">
+          <button class="btn btn-primary btn-sm" onclick = "openPhonenumber()">PHONE</button>
           <!--           <h4>PHONE:</h4> -->
           </i>
-        </div>
+<!--         </div>
 
         <div id="contact_location" class="contact_ls_item">
-          <button class="btn btn-primary btn-sm">LOCATION</button>
+          <button class="btn btn-primary btn-sm" onclick = "openLocation()">LOCATION</button> -->
           <!--           <h4>LOCATION:</h4> -->
 
-        </div>
+<!--         </div> --> 
 
         <!-- contact_page_left_side -->
-      </div>
+<!--       </div> --> 
+
+<!-- <script> -->
+<!-- function openPhonenumber() {
+  document.getElementById("contact_rs_phone_heading").style.display = "block";
+}
+  
+function openLocation() {
+  document.getElementById("contact_rs_location_heading").style.display = "block";
+}
+
+function closeForm() {
+  document.getElementById("contact_rs_phone_heading").style.display = "none";
+}
+  function closeForm() {
+  document.getElementById("contact_rs_location_heading").style.display = "none";
+} -->
+<!-- </script> -->
+
+
 
 
       <!-- ************    Contact Right-side ********************   -->
@@ -55,14 +74,10 @@
                 <textarea class="form-control" name="message" rows="10" required="" placeholder="Message"></textarea>
               </div>
 
-<!--               <div id="form_send_messages" class="form_group">
-                <div class="loading">Loading</div>
-                <div class="error-message">Something Went Wrong! Please Try Again</div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div> -->
 
               <div id="form_group_send_button" class="form_group_button">
-                <button type="submit" class="submit_button">Send Message</button>
+                <input type="submit" class="submit_button" value= "Send Message">
+                <p id = "sucess"></p>
 
               </div>
 
@@ -75,9 +90,9 @@
            
         <div id="contact_rs_phone_heading" class="contact_rs_headings">
           <h3 id="contact_content_heading" class="content_heading">Phone</h3>
-          <p>+1(331)308-4963</p>
-          <p>WhatsAPP: +1(331)308-4963</p>
-        </div>
+          <p>+1(331)308-1899</p>
+          <p>WhatsAPP: +1(331)308-1899</p>
+        </div> -->
 
         <div id="contact_rs_location_heading" class="contact_rs_headings">
           <h3 id="contact_content_heading" class="content_heading">Location</h3>
