--- a/templates/about.html
+++ b/templates/about.html
@@ -14,14 +14,7 @@
         <h3 id="about_content_heading" class="content_heading"> WHO I AM</h3>
 
         <p id="about_paragraph_one" class="content_paragraph_one">
-          I am Shashwat Patel.
-          I enjoy Machine Learning, data science, competitive coding and web development. 
-           I am experienced in applying machine learning algorithms.
-        </p>
-
-        <p id="about_paragraph_one" class="content_paragraph_one">
-         I am passionate about Machine Learning and data analysis and have a strong foundation in programming, statistics, and Mathematics. Skilled in data mining and manipulation using Python,, Databases, Wed-Development, and Tableau. 
-        </p>
+          Hello there! I am a undergrad in Computer Science with a passion for Machine Learning and developing innovative and intelligent systems that can make a difference in people's lives. My name is Shashwat Patel. I am passionate about Machine Learning and data analysis and have a strong foundation in programming, statistics, and Mathematics. Skilled in data mining and manipulation using Python, Databases, Wed-Development, and Tableau.        
 
         <div id="about_subsection" class="content_subsection">
           <div class="about_data">
@@ -39,10 +32,23 @@
               <li> <strong>City:</strong> <span>Bartlett, IL, USA</span></li>              
               <li> <strong>Email:</strong> <span>patel.shashwat@outlook.com</span></li>
               <li> <strong>Phone:</strong> <span>+1 (331)308-1899</span></li>
-              <!--            <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
             </ul>
           </div>
         </div>
+        
+        <p id="about_paragraph_one" class="content_paragraph_one">
+
+          
+          As a machine learning engineer, I am constantly striving to push the boundaries of what is possible with intelligent systems. I believe that the intersection of machine learning and human ingenuity can help us tackle some of the biggest challenges facing society today.
+
+In my free time, I enjoy learning about new advancements in the field of AI and experimenting with new technologies.I believe that education is the key to unlocking the full potential of machine learning, and I enjoy giving talks and workshops on the subject.
+        </p>
+
+
+        
+        <p id="about_paragraph_one" class="content_paragraph_one">
+          Thank you for taking the time to learn more about me. If you have any questions or would like to discuss a project, please don't hesitate to get in touch!
+        </p>
 
         <!-- about_right_side -->
       </div>
