--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,19 +11,19 @@
           <button class="btn btn-primary btn-sm" onclick = "openPhonenumber()">PHONE</button>
           <!--           <h4>PHONE:</h4> -->
           </i>
-<!--         </div>
+</div>
 
         <div id="contact_location" class="contact_ls_item">
           <button class="btn btn-primary btn-sm" onclick = "openLocation()">LOCATION</button> -->
-          <!--           <h4>LOCATION:</h4> -->
+          <!--           <h4>LOCATION:</h4>
 
-<!--         </div> --> 
+ </div>
 
-        <!-- contact_page_left_side -->
-<!--       </div> --> 
+  <!-- contact_page_left_side -->
+  </div> 
 
-<!-- <script> -->
-<!-- function openPhonenumber() {
+<script> 
+function openPhonenumber() {
   document.getElementById("contact_rs_phone_heading").style.display = "block";
 }
   
@@ -36,7 +36,7 @@ function closeForm() {
 }
   function closeForm() {
   document.getElementById("contact_rs_location_heading").style.display = "none";
-} -->
+}
 <!-- </script> -->
 
 
@@ -76,8 +76,7 @@ function closeForm() {
 
 
               <div id="form_group_send_button" class="form_group_button">
-                <input type="submit" class="submit_button" value= "Send Message">
-                <p id = "sucess"></p>
+                <button type="submit" class="submit_button">Send Message</button>
 
               </div>
 
@@ -96,7 +95,7 @@ function closeForm() {
 
         <div id="contact_rs_location_heading" class="contact_rs_headings">
           <h3 id="contact_content_heading" class="content_heading">Location</h3>
-          <p>144 Hillcrest LN 2N, Bartlett, IL 60103 USA</p>
+          <p>Bartlett, IL 60103 USA</p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2965.447399930301!2d-88.18441668425316!3d41.99067286634034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f074eb79d6233%3A0xeb919f3081ba6fa6!2s144%20Hillcrest%20Ln%20%232n%2C%20Bartlett%2C%20IL%2060103!5e0!3m2!1sen!2sus!4v1669958850576!5m2!1sen!2sus"
             width="200px" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
@@ -109,6 +108,8 @@ function closeForm() {
 
         <!--contact_right_side -->
       </div>     
+
+
 
 
 
