Back to old contact

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,21 +1,21 @@
  <!-- ************  Contact Left-side ********************   -->
-<!--       <div id="contact_page_left_pane" class="left_pane" class="contact_page_left_side"> -->
+     <div id="contact_page_left_pane" class="left_pane" class="contact_page_left_side">
 
-<!--         <div id="contact_email" class="contact_ls_item">
+      <div id="contact_email" class="contact_ls_item">
           <button class="btn btn-primary btn-sm">EMAIL</button>
-          <!--           <h4>EMAIL:</h4> -->
+<!--                <h4>EMAIL:</h4>  -->
 
-<!--         </div> -->
+     </div> 
 
-<!--         <div id="contact_phone" class="contact_ls_item">
+   <div id="contact_phone" class="contact_ls_item">
           <button class="btn btn-primary btn-sm" onclick = "openPhonenumber()">PHONE</button>
-          <!--           <h4>PHONE:</h4> -->
+<!--                 <h4>PHONE:</h4>  -->
           </i>
 </div>
 
         <div id="contact_location" class="contact_ls_item">
-          <button class="btn btn-primary btn-sm" onclick = "openLocation()">LOCATION</button> -->
-          <!--           <h4>LOCATION:</h4>
+          <button class="btn btn-primary btn-sm" onclick = "openLocation()">LOCATION</button> 
+<!--                  <h4>LOCATION:</h4> -->
 
  </div>
 
@@ -37,7 +37,7 @@ function closeForm() {
   function closeForm() {
   document.getElementById("contact_rs_location_heading").style.display = "none";
 }
-<!-- </script> -->
+ </script>
 
 
 
