--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
           
           As a machine learning engineer, I am constantly striving to push the boundaries of what is possible with intelligent systems. I believe that the intersection of machine learning and human ingenuity can help us tackle some of the biggest challenges facing society today.
 
-In my free time, I enjoy learning about new advancements in the field of AI and experimenting with new technologies.I believe that education is the key to unlocking the full potential of machine learning, and I enjoy giving talks and workshops on the subject.
+In my free time, I enjoy learning about new advancements in the field of AI and experimenting with new technologies.I believe that education is the key to unlocking the full potential of a person.
         </p>
 
 
