change home page

--- a/templates/app.html
+++ b/templates/app.html
@@ -84,7 +84,7 @@
           class="profile_img">
         <h1 id="home_page_heading" class="page_heading ">Shashwat Patel</h1>
         <p>
-          I'm <span class="home_description">Data Science / Machine Learning
+          I'm <span class="home_description">Data Scientist / Machine Learning
             Engineer</span>
         </p>
 
