--- a/templates/styles.css
+++ b/templates/styles.css
@@ -14,7 +14,7 @@ html, body {
 body{
 /*   display: inline-block; */
 /*   background-image: linear-gradient(to right, rgba(64, 64, 64, 0.9), rgba(0, 0, 0, 0.9)); */
-  background-image: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/background_image.jpg") ;
+  background-image: linear-gradient(to top, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/background_image.jpg") ;
  background-size: cover;
   repeat: no-repeat;
   position: absolute;
