--- a/templates/app.html
+++ b/templates/app.html
@@ -20,6 +20,19 @@
       type="image/x-icon">
     <script src="https://kit.fontawesome.com/9b80a8324a.js" crossorigin="anonymous"></script>
 
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+
+<!--     For Email form -->
+    <script src="static/index.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("MTQgE0u8nxJFmCDgZ");
+   })();
+</script>
+
+    
   </head>
   <!-- **************************    Head END Body START ***************   -->
 
