--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,8 +1,12 @@
  <!-- ************  Contact Left-side ********************   -->
      <div id="contact_page_left_pane" class="left_pane" class="contact_page_left_side">
 
+
+
+       
+
       <div id="contact_email" class="contact_ls_item">
-          <button class="btn btn-primary btn-sm">EMAIL</button>
+          <button class="btn btn-primary btn-sm" onclick = "openemail()">EMAIL</button>
 <!--                <h4>EMAIL:</h4>  -->
 
      </div> 
@@ -24,10 +28,24 @@
 
 <script> 
 function openPhonenumber() {
+  
   document.getElementById("contact_rs_phone_heading").style.display = "block";
+  document.getElementById("contact_rs_email_heading").style.display = "none";
+  document.getElementById("contact_rs_location_heading").style.display = "none";
+  
+}
+  function openemail() {
+  
+  document.getElementById("contact_rs_phone_heading").style.display = "none";
+  document.getElementById("contact_rs_email_heading").style.display = "block";
+  document.getElementById("contact_rs_location_heading").style.display = "none";
+  
 }
   
+  
 function openLocation() {
+  document.getElementById("contact_rs_phone_heading").style.display = "none";
+  document.getElementById("contact_rs_email_heading").style.display = "none";
   document.getElementById("contact_rs_location_heading").style.display = "block";
 }
 
@@ -45,16 +63,33 @@ function closeForm() {
       <!-- ************    Contact Right-side ********************   -->
       <div id="-" class="right_pane" class="contact_right_side">
         <h1 id="contact_page_heading" class="page_heading">CONTACT</h1>
-        <h3 id="contact_content_heading" class="content_heading">Email</h3>
+        
+        
+        <div id="contact_rs_phone_heading" class="contact_rs_headings">
+          <h3 id="contact_content_heading" class="content_heading">Phone</h3>
+          <p>+1(331)308-1899</p>
+          <p>WhatsAPP: +1(331)308-1899</p>
+        </div> 
 
-        <div id="contact_rs_email_heading" class="contact_rs_headings">          
+        <div id="contact_rs_location_heading" class="contact_rs_headings">
+          <h3 id="contact_content_heading" class="content_heading">Location</h3>
+          <p>Bartlett, IL 60103 USA</p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2965.447399930301!2d-88.18441668425316!3d41.99067286634034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f074eb79d6233%3A0xeb919f3081ba6fa6!2s144%20Hillcrest%20Ln%20%232n%2C%20Bartlett%2C%20IL%2060103!5e0!3m2!1sen!2sus!4v1669958850576!5m2!1sen!2sus"
+            width="200px" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div> 
+        
+        <div id="contact_rs_email_heading" class="contact_rs_headings"> 
+          <h3 id="contact_content_heading" class="content_heading">Email</h3>
 
           <fieldset>
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <div  class="php-email-form">
               <div id="contact_email_form" class="contact_email_form">
 
                 <div id="form_group_name" class="form_group form-horizontal">
-                  <label for="name">Your Name</label> <input type="text" name="name" class="form-control form-inline"
+                  <label for="name">Your Name</label> 
+                  <input type="text" name="name" class="form-control form-inline"
                     id="name" required="" placeholder="Your name">
                 </div>
 
@@ -71,36 +106,23 @@ function closeForm() {
 
               <div id="form_group_message" class="form_group form-horizontal">
                 <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required="" placeholder="Message"></textarea>
+                <textarea class="form-control" name="message" id="message" rows="10" required="" placeholder="Message"></textarea>
               </div>
 
 
               <div id="form_group_send_button" class="form_group_button">
-                <button type="submit" class="submit_button">Send Message</button>
+                <button class="submit_button" onclick ="sendmail()">Send Message</button>
 
               </div>
 
-            </form>
+            </div>
           </fieldset>
 
 
 
 
            
-        <div id="contact_rs_phone_heading" class="contact_rs_headings">
-          <h3 id="contact_content_heading" class="content_heading">Phone</h3>
-          <p>+1(331)308-1899</p>
-          <p>WhatsAPP: +1(331)308-1899</p>
-        </div> -->
-
-        <div id="contact_rs_location_heading" class="contact_rs_headings">
-          <h3 id="contact_content_heading" class="content_heading">Location</h3>
-          <p>Bartlett, IL 60103 USA</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2965.447399930301!2d-88.18441668425316!3d41.99067286634034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f074eb79d6233%3A0xeb919f3081ba6fa6!2s144%20Hillcrest%20Ln%20%232n%2C%20Bartlett%2C%20IL%2060103!5e0!3m2!1sen!2sus!4v1669958850576!5m2!1sen!2sus"
-            width="200px" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div> 
+          
           
           
         </div>       
