--- a/templates/app.html
+++ b/templates/app.html
@@ -45,9 +45,11 @@
         <div class="profile">
           <img src="https://flaskpersonalportfolio.shashwatpatel5.repl.co/static/DSC_3792.png" alt=""
             class="img-fluid rounded-circle img-responsive">
-          <h1 class="profile_name">Shashwat Patel</h1> <!-- link that come to itself -->
-  
-  
+          <h1 class="profile_name">Shashwat Patel</h1>
+          
+          
+          
+          <!-- link that come to itself -->  
           <div class="social_links">
             <a href="https://twitter.com/shashwat_107" class="twitter"> <i class="fa-brands fa-twitter"></i></a>
   <!--           <a href="#" class="facebook"> <i class="fa-brands fa-facebook"></i></a> -->
@@ -97,7 +99,7 @@
           class="profile_img">
         <h1 id="home_page_heading" class="page_heading ">Shashwat Patel</h1>
         <p>
-          I'm <span class="home_description">Data Scientist / Machine Learning
+          I'm <span class="home_description">Data Scientist
             Engineer</span>
         </p>
 
